--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
  <!DOCTYPE html>
+ <html lang="en-US">
 <html>
 
 <head>
+<meta charset+"UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE-edge">
+<meta name="viewport" content="width=device-width, inital-scale=1.0">
 <link rel="stylesheet" href="app.css"/>
-<title>Page Title</title>
+<title>Rich's Design and Repair</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Design Repair and 3D Printing Services</h1>
+<p>I design, repair, modify, electronics as well as 3D print stuff</p>
 <button onClick="alertButton()"> Click</button>
 
 </body>
