--- a/showcase.html
+++ b/showcase.html
@@ -17,8 +17,8 @@
 		
 		<div>
 			<ul id="navbar">
-				<li><a class="active" href="index.html">Home</a></li>
-				<li><a href="showcase.html">Showcase</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a class="active" href="">Showcase</a></li>
 				<li><a href="">About</a></li>
 				<li><a href="">Contact</a></li>
 				<li><a href=""><img src="Images/cart.png" width="50" height="50" alt"shopping cart"></a></li>
@@ -27,8 +27,11 @@
 		</div>
 	</section>
 
-<p>I design, repair, modify, electronics as well as 3D print stuff</p>
-<button onClick="alertButton()"> Click meeeeee</button>
+<p>
+	<img src="Images/Harness_Before.jpg" width="1000" height="1000" alt"">
+	<img src="Images/Harness_After.jpg" width="1000" height="1000" alt"">
+</p>
+
 
 </body>
 <script src="app.js"></script>
