--- a/showcase.html
+++ b/showcase.html
@@ -32,6 +32,21 @@
 	<img src="Images/Harness_After.jpg" width="1000" height="1000" alt"">
 </p>
 
+<p>
+	<img src="Images/batteryholder1.jpg" width="1000" height="1000" alt"">
+	<img src="Images/batteryholder2.jpg" width="1000" height="1000" alt"">
+</p>
+
+<p>
+	<img src="Images/qblockdesign.jpg" width="1000" height="1000" alt"">
+	<img src="Images/qblock.jpg" width="1000" height="1000" alt"">
+</p>
+
+<p>
+	<img src="Images/stlogoprint.jpg" width="1000" height="1000" alt"">
+	<img src="Images/stlogo.jpg" width="1000" height="1000" alt"">
+</p>
+
 
 </body>
 <script src="app.js"></script>
