--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE-edge">
 <meta name="viewport" content="width=device-width, inital-scale=1.0">
 <link rel="stylesheet" href="app.css"/>
-<title>Rich's Design and Repair</title>
+<title>RAD R&D</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 		</div>
 	</section>
 
-<p>I design, repair, modify, electronics as well as 3D print stuff</p>
+<p>I design, repair, modify, electronics as well as 3D print stuff (this is jsut filler text for now don't you pre-judge me)</p>
 <button onClick="alertButton()"> Click meeeeee</button>
 
 </body>
